# bitsaccoserver

./: .dockerignore  .env.example  .env.nestapi  .gitignore  Cargo.toml  Dockerfile  Leptos.toml  README.md  SHARES_COMPATIBILITY.md  compose.yml  init-db.sql  install.sh  justfile  package.json  rustfmt.toml  tailwind.config.js  test_shares_compat.py  turbo.json
.claude/: settings.local.json
.github/workflows/: docker-build-push.yml  publish-admin.yml  publish-bitsaccoserver.yml  publish-server.yml
app/: Cargo.toml
app/src/: lib.rs  main.rs
app/src/api/: abstraction.rs  analytics.rs  auth.rs  auth_compat.rs  client.rs  config.rs  dashboard_client.rs  errors.rs  groups.rs  lnurl.rs  members.rs  mod.rs  share_offers.rs  shares.rs  shares_compat.rs  validation.rs
app/src/api/backends/: mod.rs
app/src/api/backends/nestjs/: auth.rs  client.rs  endpoints.rs  groups.rs  jwt_validator.rs  middleware.rs  mod.rs  users.rs  wallets.rs
app/src/api/backends/rust/: mod.rs
app/src/api/traits/: auth.rs  groups.rs  mod.rs  users.rs  wallets.rs
app/src/api/types/: auth.rs  common.rs  mod.rs  user.rs
app/src/assets/: jwt_public_key.pem
app/src/components/: mod.rs
app/src/components/auth/: auth_guard.rs  login_form.rs  mod.rs  recovery_form.rs  register_form.rs  server_auth_guard.rs  ssr_protected_route.rs
app/src/components/forms/: form_builder.rs  form_field.rs  form_group.rs  mod.rs  validation.rs
app/src/components/layout/: app_layout.rs  footer.rs  header.rs  mobile_sidebar.rs  mod.rs  navigation.rs  sidebar.rs  theme_provider.rs
app/src/components/tables/: mod.rs
app/src/components/ui/: button.rs  checkbox.rs  input.rs  loading.rs  mod.rs  modal.rs  select.rs  table.rs  toast.rs
app/src/contexts/: app_state.rs  auth.rs
app/src/hooks/: api.rs  forms.rs  mod.rs
app/src/middleware/: auth.rs  auth_compat.rs  cors.rs  mod.rs  rate_limit.rs
app/src/pages/: dashboard.rs  groups.rs  login.rs  members.rs  mod.rs  settings.rs  shares.rs  signup.rs
app/src/repositories/: audit_logs.rs  fedimint_operations.rs  group_memberships.rs  groups.rs  lightning_addresses.rs  lnurl_transactions.rs  members.rs  mod.rs  share_offers.rs  shares.rs  wallet_reserves.rs  wallet_transactions.rs  wallets.rs
app/src/server/: config.rs  state.rs
app/src/services/: analytics.rs  auth.rs  fedimint.rs  mod.rs  share_purchase.rs  transaction.rs  validation.rs  wallet.rs
app/src/services/lnurl/: lightning_address.rs  mod.rs
app/src/style/: tailwind.css
app/src/tests/: mod.rs
app/src/utils/: api.rs  auth.rs  enhanced_api.rs  mod.rs  session.rs  validation.rs
apps/admin/: .dockerignore  .env.example  .eslintrc.js  Dockerfile  next.config.js  package.json  tsconfig.json  tsconfig.tsbuildinfo
apps/admin/public/: index.html
apps/admin/src/: paths.ts
apps/admin/src/contexts/: user-context.tsx
apps/admin/src/hooks/: use-admin-members.ts  use-admins.ts  use-members.ts
apps/admin/src/lib/: api-proxy.ts  api-url.ts  fetch-with-auth.ts  nav-filter.ts
apps/admin/src/types/: metrics.d.ts  nav.d.ts  user.ts
apps/server/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  jest.setup.ts  nest-cli.json  package.json  tsconfig.json
apps/server/keycloak/: README.md  bitsaccoserver-dev-realm.json  get-token.sh  import-realm-manual.sh  import-realm.sh
apps/server/src/: app.controller.spec.ts  app.controller.ts  app.module.ts  app.service.spec.ts  app.service.ts  main.ts
apps/server/src/api/: admin.controller.ts  api-key.controller.ts  api.module.ts  api.service.ts  compliance.controller.ts  sacco.controller.ts
apps/server/src/auth/: auth.controller.ts  auth.dto.ts  auth.module.ts  auth.service.ts  index.ts  jwt.strategy.ts  member.schema.ts  user.schema.ts
apps/server/src/base/: base.module.ts  compliance.service.ts  governance.service.ts  index.ts  maker-checker.service.ts  risk-management.service.ts  segregation.service.ts
apps/server/src/chama/: chama.schema.ts  index.ts
apps/server/src/common/: api-key.controller.ts  api-key.dto.ts  api-key.service.ts  auth.guard.ts  common.module.ts  index.ts  jwt-auth.middleware.ts  metrics.service.ts  organization.dto.ts  organization.service.ts  rate-limit.interceptor.ts  roles.decorator.ts  types.ts  usage-tracking.middleware.ts
apps/server/src/loans/: loans.service.ts
apps/server/src/manager/: index.ts  manager.controller.ts  manager.module.ts
apps/server/src/organization/: organization.controller.ts  organization.dto.ts  organization.module.ts  organization.schema.ts  organization.service.spec.ts  organization.service.ts
apps/server/src/shares/: index.ts  shares.controller.spec.ts  shares.controller.ts  shares.module.ts  shares.service.spec.ts  shares.service.ts
docs/: ENVIRONMENT_VARIABLES.md  JWT_DEPLOYMENT_GUIDE.md  QUICKSTART.md  contributing.md
e2e/: package.json  playwright.config.ts
e2e/tests/: auth.spec.ts  dashboard-navigation.spec.ts  mobile-sidebar.spec.ts
entity/: Cargo.toml
entity/entity/src/: audit_logs.rs  external_targets.rs  fedimint_operations.rs  group_memberships.rs  groups.rs  lightning_addresses.rs  members.rs  mod.rs  prelude.rs  sea_orm_active_enums.rs  share_offers.rs  shares.rs  wallet_reserves.rs  wallet_transactions.rs  wallets.rs
entity/src/: audit_logs.rs  external_targets.rs  fedimint_operations.rs  group_memberships.rs  groups.rs  lib.rs  lightning_addresses.rs  lnurl_transactions.rs  members.rs  prelude.rs  sea_orm_active_enums.rs  share_offers.rs  shares.rs  wallet_reserves.rs  wallet_transactions.rs  wallets.rs
keycloak/: realm-export.json
migration/: Cargo.toml
migration/src/: lib.rs  m20240101_000001_initial.rs  m20250703_000001_initial_schema.rs  m20250703_000002_indexes_and_views.rs  m20250703_000003_cache_triggers.rs  m20250703_000004_advanced_triggers.rs  m20250803_000001_wallet_tables.rs  m20250803_000002_wallet_indexes.rs  m20250803_000003_lnurl_tables.rs
public/: src.css  styles.css
scripts/: extract-jwt-key.sh  pre-commit.sh  run-migrations.sh
style/: output.css  tailwind.css
tests/: integration_test.rs
(+98 files in other folders)
