[package]
name = "app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[[bin]]
name = "app"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
axum = { workspace = true, optional = true }
leptos = { workspace = true }
leptos_axum = { workspace = true, optional = true }
leptos_router = { workspace = true }
leptos_meta = { workspace = true }
tower = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
dotenvy = { workspace = true, optional = true }
config = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
sqlx = { workspace = true, optional = true }
sea-orm = { workspace = true, optional = true }
jsonwebtoken = { workspace = true, optional = true }
keycloak = { workspace = true, optional = true }
moka = { workspace = true, optional = true }
fedimint-core = { workspace = true, optional = true }
fedimint-client = { workspace = true, optional = true }
fedimint-mint-client = { workspace = true, optional = true }
fedimint-wallet-client = { workspace = true, optional = true }
fedimint-ln-client = { workspace = true, optional = true }
fedimint-ln-common = { workspace = true, optional = true }
bitcoin = { workspace = true, optional = true }
lightning-invoice = { workspace = true, optional = true }

# Local dependencies
entity = { path = "../entity", optional = true }
migration = { path = "../migration", optional = true }

# Additional dependencies
http = "1"
hyper = { version = "1", optional = true }
gloo-timers = { version = "0.3", features = ["futures"] }
gloo-net = { version = "0.6", features = ["http"] }
web-sys = { version = "0.3", features = ["Window", "Storage", "History"] }
wasm-bindgen = "0.2"
regex = "1.0"
urlencoding = "2.1"

[features]
default = ["ssr"]
ssr = [
    "leptos/ssr",
    "leptos_axum/default",
    "dep:axum",
    "dep:tower",
    "dep:tower-http",
    "dep:tokio",
    "dep:rust_decimal",
    "dep:thiserror",
    "dep:anyhow",
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:dotenvy",
    "dep:config",
    "dep:reqwest",
    "dep:sqlx",
    "dep:sea-orm",
    "dep:jsonwebtoken",
    "dep:keycloak",
    "dep:moka",
    "dep:hyper",
    "dep:entity",
    "dep:migration",
    "dep:fedimint-core",
    "dep:fedimint-client",
    "dep:fedimint-mint-client",
    "dep:fedimint-wallet-client",
    "dep:fedimint-ln-client",
    "dep:fedimint-ln-common",
    "dep:bitcoin",
    "dep:lightning-invoice",
]