[package]
name = "app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[[bin]]
name = "app"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
axum = { workspace = true, optional = true }
leptos = { workspace = true }
leptos_axum = { workspace = true, optional = true }
leptos_router = { workspace = true }
leptos_meta = { workspace = true }
tower = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
dotenvy = { workspace = true, optional = true }
config = { workspace = true, optional = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
jsonwebtoken = { workspace = true, optional = true }

# Local dependencies removed (entity and migration no longer needed)

# Additional dependencies
http = "1"
gloo-timers = { version = "0.3", features = ["futures"] }
gloo-net = { version = "0.6", features = ["http"] }
web-sys = { version = "0.3", features = [
  "Window",
  "Storage",
  "History",
  "EventSource",
  "MessageEvent",
  "ErrorEvent",
  "Event",
  "EventTarget",
  "console"
] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
regex = "1.0"
urlencoding = "2.1"
url = "2.4"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = ["ssr"]
hydrate = ["leptos/hydrate"]
ssr = [
    "leptos/ssr",
    "leptos_axum/default",
    "dep:axum",
    "dep:tower",
    "dep:tower-http",
    "dep:tokio",
    "dep:rust_decimal",
    "dep:thiserror",
    "dep:anyhow",
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:dotenvy",
    "dep:config",
    "dep:jsonwebtoken",
]