[package]
name = "entity"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
thiserror = { workspace = true }

# Additional dependencies
async-trait = "0.1"